syntax = "proto3";

package course;

option go_package = "shared/proto/course;course";

service CourseService {
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse);
  rpc CreateSection(CreateSectionRequest) returns (CreateSectionResponse);
  rpc CreateLesson(CreateLessonRequest) returns (CreateLessonResponse);
  rpc GetCourses(GetCoursesRequest) returns (GetCoursesResponse); 
  rpc GetCourseDetails(GetCourseDetailsRequest) returns (GetCourseDetailsResponse); 
  rpc EnrollCourse(EnrollCourseRequest) returns (EnrollCourseResponse);
  rpc GetMyCourses(GetMyCoursesRequest) returns (GetMyCoursesResponse); 
  rpc MarkLessonCompleted(MarkLessonCompletedRequest) returns (MarkLessonCompletedResponse);
  rpc GetUploadURL(GetUploadURLRequest) returns (GetUploadURLResponse);

  rpc UpdateCourse(UpdateCourseRequest) returns (UpdateCourseResponse); 
  rpc UpdateSection(UpdateSectionRequest) returns (UpdateSectionResponse); 
  rpc DeleteSection(DeleteSectionRequest) returns (DeleteSectionResponse); 
  rpc DeleteLesson(DeleteLessonRequest) returns (DeleteLessonResponse);
  rpc UpdateLesson(UpdateLessonRequest) returns (UpdateLessonResponse);
  rpc PublishCourse(PublishCourseRequest) returns (PublishCourseResponse);
  rpc GetCourseCount(GetCourseCountRequest) returns (GetCourseCountResponse);
  rpc DeleteCourse(DeleteCourseRequest) returns (DeleteCourseResponse);
}

// === Message Definitions ===

message Course {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 instructor_id = 4;
  string thumbnail_url = 5;
  double price = 6;
  bool is_published = 7;
}

message Section {
  int64 id = 1;
  int64 course_id = 2;
  string title = 3;
  int32 order_index = 4;
  repeated Lesson lessons = 5;
}

message Lesson {
  int64 id = 1;
  int64 section_id = 2;
  string title = 3;
  string lesson_type = 4;
  string content_url = 5;
  int32 order_index = 6;
  bool is_completed = 7;
}

message CreateCourseRequest {
  string title = 1;
  string description = 2;
  int64 instructor_id = 3;
  double price = 4;
  string thumbnail_url = 5;
}
message CreateCourseResponse {
  Course course = 1;
}

message CreateSectionRequest {
  int64 course_id = 1;
  string title = 2;
  int32 order_index = 3;
}
message CreateSectionResponse {
  Section section = 1;
}

message CreateLessonRequest {
  int64 section_id = 1;
  string title = 2;
  string lesson_type = 3;
  string content_url = 4;
  int32 order_index = 5;
}
message CreateLessonResponse {
  Lesson lesson = 1;
}

message GetCoursesRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;        
  double min_price = 4;     
  double max_price = 5;     
  string sort_by = 6;
  int64 instructor_id = 7;
}
message GetCoursesResponse {
  repeated Course courses = 1;
  int64 total = 2;          
  int32 page = 3;
  int32 total_pages = 4;
}

message GetCourseDetailsRequest {
  int64 course_id = 1;
  int64 user_id = 2; 
}
message GetCourseDetailsResponse {
  Course course = 1;
  repeated Section sections = 2;
  bool is_enrolled = 3;
}

message EnrollCourseRequest {
  int64 user_id = 1;
  int64 course_id = 2;
}
message EnrollCourseResponse {
  bool success = 1;
}

message GetMyCoursesRequest {
  int64 user_id = 1;
}
message GetMyCoursesResponse {
  repeated Course courses = 1;
}

message MarkLessonCompletedRequest {
  int64 user_id = 1;
  int64 lesson_id = 2;
}
message MarkLessonCompletedResponse {
  bool success = 1;
}

message GetUploadURLRequest {
  string file_name = 1;
  string content_type = 2;
  int64 section_id = 3;
}

message GetUploadURLResponse {
  string upload_url = 1;
  string final_url = 2;
}

message UpdateCourseRequest {
  int64 course_id = 1;
  string title = 2;       
  string description = 3; 
  bool is_published = 4;  
  double price = 5;       
  string thumbnail_url = 6;
}
message UpdateCourseResponse {
  bool success = 1;
}

message UpdateSectionRequest {
  int64 section_id = 1;
  string title = 2;
}
message UpdateSectionResponse {
  bool success = 1;
}

message DeleteSectionRequest {
  int64 section_id = 1;
}
message DeleteSectionResponse {
  bool success = 1;
}

message DeleteLessonRequest {
  int64 lesson_id = 1;
}
message DeleteLessonResponse {
  bool success = 1;
}

message UpdateLessonRequest {
  int64 lesson_id = 1;
  string title = 2;
  string content_url = 3;
  string lesson_type = 4; 
}
message UpdateLessonResponse { bool success = 1; }

message PublishCourseRequest {
  int64 course_id = 1;
  bool is_published = 2; // true = publish, false = unpublish
}
message PublishCourseResponse {
  bool success = 1;
}

message GetCourseCountRequest {}

message GetCourseCountResponse { int64 count = 1; }

message DeleteCourseRequest {
  int64 course_id = 1;
}
message DeleteCourseResponse {
  bool success = 1;
}